--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "vercel-build": "prisma generate && next build"
+    "vercel-build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
