--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/lodash": "^4.17.7",
     "@types/papaparse": "^5.3.14",
     "@types/react-window": "^1.8.8",
+    "@types/validator": "^13.12.2",
     "@vercel/blob": "^0.23.4",
     "ai": "^3.3.31",
     "app": "link:@/app",
@@ -69,6 +70,7 @@
     "react-query": "^3.39.3",
     "react-resizable": "^3.0.5",
     "react-resizable-panels": "^2.1.2",
+    "react-responsive": "^10.0.0",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-virtuoso": "^4.10.2",
     "react-window": "^1.8.10",
@@ -78,6 +80,7 @@
     "tailwindcss-animate": "^1.0.7",
     "utils": "link:@/utils",
     "uuid": "^10.0.0",
+    "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
