--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-resizable": "^3.0.5",
     "react-resizable-panels": "^2.1.2",
     "react-responsive": "^10.0.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-virtuoso": "^4.10.2",
     "react-window": "^1.8.10",
