--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "next": "14.2.7",
     "next-auth": "5.0.0-beta.20",
     "next-themes": "^0.3.0",
+    "node-cache": "^5.1.2",
     "openai": "4.58.2",
     "papaparse": "^5.3.0",
     "prisma": "^5.19.1",
@@ -75,6 +76,7 @@
     "react-virtualized-auto-sizer": "^1.0.24",
     "react-virtuoso": "^4.10.2",
     "react-window": "^1.8.10",
+    "stream": "^0.0.3",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar": "^3.1.0",
