--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "idb": "^8.0.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.438.0",
+    "nanoid": "^5.0.7",
     "next": "14.2.7",
     "next-auth": "5.0.0-beta.20",
     "next-themes": "^0.3.0",
