fix: npm error Unsupported URL Type link:: link:@/ap

--- a/package.json
+++ b/package.json
@@ -54,14 +54,14 @@
     "@uiw/react-codemirror": "^4.23.6",
     "@vercel/blob": "^0.23.4",
     "ai": "3.4.33",
-    "app": "link:@/app",
+    "app": "file:@/app",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
     "codemirror": "^6.0.1",
-    "components": "link:@/components",
-    "csv": "link:@codemirror/legacy-modes/mode/csv",
+    "components": "file:@/components",
+    "csv": "file:@codemirror/legacy-modes/mode/csv",
     "csv-parse": "^5.5.6",
     "dataloader": "^2.2.3",
     "date-fns": "^3.6.0",
@@ -103,7 +103,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwind-scrollbar": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
-    "utils": "link:@/utils",
+    "utils": "file:@/utils",
     "uuid": "^10.0.0",
     "uuidv4": "^6.2.13",
     "validator": "^13.12.0",
